--- a/lib/generators/capistrano/generals/templates/nginx.conf.erb
+++ b/lib/generators/capistrano/generals/templates/nginx.conf.erb
@@ -1,13 +1,14 @@
+<%= template_to_s('_head').to_s %>
 #         Upstreams
 ##############################
 <% if fetch(:use_unicorn) %>
-upstream unicorn_<%= fetch(:nginx_config_name) %> {
-  server unix:/tmp/unicorn.<%= fetch(:nginx_config_name) %>.sock fail_timeout=<%= fetch(:nginx_fail_timeout) %>;
+upstream unicorn_<%= fetch(:app_config_name) %> {
+  server unix:/tmp/unicorn.<%= fetch(:app_config_name) %>.sock fail_timeout=<%= fetch(:nginx_fail_timeout) %>;
 }
 <% end %>
 <% if fetch(:use_puma) %>
-upstream puma_<%= fetch(:nginx_config_name) %> {
-  server unix:/tmp/puma.<%= fetch(:nginx_config_name) %>.sock fail_timeout=<%= fetch(:nginx_fail_timeout) %>;
+upstream puma_<%= fetch(:app_config_name) %> {
+  server unix:/tmp/puma.<%= fetch(:app_config_name) %>.sock fail_timeout=<%= fetch(:nginx_fail_timeout) %>;
 }
 <% end %>
 
@@ -67,30 +68,30 @@ server {
 
   <% # FILE HANDLING %>
   <% if fetch(:use_unicorn) %>
-  try_files $uri/index.html $uri @unicorn_<%= fetch(:nginx_config_name) %>;
+  try_files $uri/index.html $uri @unicorn_<%= fetch(:app_config_name) %>;
 
-  location @unicorn_<%= fetch(:nginx_config_name) %> {
+  location @unicorn_<%= fetch(:app_config_name) %> {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
     <% if fetch(:nginx_use_ssl) %>
     proxy_set_header X-Forwarded-Proto https;
     <% end %>
-    proxy_pass http://unicorn_<%= fetch(:nginx_config_name) %>;
+    proxy_pass http://unicorn_<%= fetch(:app_config_name) %>;
     }
   <% end %>
 
   <% if fetch(:use_puma) %>
-  try_files $uri/index.html $uri @puma_<%= fetch(:nginx_config_name) %>;
+  try_files $uri/index.html $uri @puma_<%= fetch(:app_config_name) %>;
 
-  location @unicorn_<%= fetch(:nginx_config_name) %> {
+  location @unicorn_<%= fetch(:app_config_name) %> {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
     <% if fetch(:nginx_use_ssl) %>
     proxy_set_header X-Forwarded-Proto https;
     <% end %>
-    proxy_pass http://puma_<%= fetch(:nginx_config_name) %>;
+    proxy_pass http://puma_<%= fetch(:app_config_name) %>;
     }
   <% end %>
 
