Started on puma

--- a/lib/generators/capistrano/generals/templates/sidekiq_init.sh.erb
+++ b/lib/generators/capistrano/generals/templates/sidekiq_init.sh.erb
@@ -7,7 +7,7 @@
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
 # Short-Description: Manage sidekiq workers
-# Description:       tarts and Stops Sidekiq message processor for Stratus application.
+# Description:       Starts and Stops Sidekiq message processor for Stratus application.
 ### END INIT INFO
 
 # User-specified exit parameters used in this script:
