--- a/lib/generators/capistrano/generals/templates/nginx.conf.erb
+++ b/lib/generators/capistrano/generals/templates/nginx.conf.erb
@@ -62,16 +62,20 @@ server {
   ssl_dhparam <%= remote_ssl_dhparam_file %>;
   <% end %>
 
+  <% if fetch(:ngingx_strict_transport_security) %>
+  <% if fetch(:nginx_respond_to_subdomains) %>
+  add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+  <% else %>
+  add_header Strict-Transport-Security max-age=63072000;
+  <% end %>
+  add_header X-Content-Type-Options nosniff;
+  <% end %>
+
   <% else %>
   listen 80;
   <% end %>
 
-  <% if fetch(:ngingx_strict_transport_security) %>
-  add_header Strict-Transport-Security max-age=63072000;
-  add_header X-Content-Type-Options nosniff;
-  <% end %>
   add_header X-Frame-Options <%= fetch(:nginx_x_frame_options) %>;
-
 
   <% # FILE HANDLING %>
   <% if fetch(:use_unicorn) %>
