Added puma worker killer

--- a/lib/generators/capistrano/generals/templates/puma.rb.erb
+++ b/lib/generators/capistrano/generals/templates/puma.rb.erb
@@ -22,3 +22,15 @@ on_worker_boot do
     end
   end
 end
+
+before_fork do
+  if defined? PumaWorkerKiller
+    PumaWorkerKiller.config do |config|
+      config.ram           = <%= fetch(:puma_worker_killer_ram) %>
+      config.frequency     = <%= fetch(:puma_worker_killer_frequency) %>
+      config.percent_usage = <%= fetch(:puma_worker_killer_percent_usage) %>
+      config.rolling_restart_frequency = <%= fetch(:puma_worker_killer_rolling_restart_frequency) %>
+    end
+    PumaWorkerKiller.start
+  end
+end
