--- a/lib/generators/capistrano/generals/templates/faye.ru.erb
+++ b/lib/generators/capistrano/generals/templates/faye.ru.erb
@@ -5,7 +5,7 @@ require '<%= fetch(:faye_require) %>'
 
 Faye.logger = Logger.new('<%= faye_log_file %>', <%= fetch(:faye_max_log_files) %>, <%= fetch(:faye_max_log_size) %>*1e6) # Max 3 files of 100 MB
 
-bayeux = Faye::RackAdapter.new mount: '<%= fetch(:faye_mount_location) %>', timeout: <%= fetch(:faye_timeout) %>
+bayeux = Faye::RackAdapter.new mount: '/', timeout: <%= fetch(:faye_timeout) %>
 <% for extension in fetch(:faye_extensions) %>
 bayeux.add_extension(<%= extension %>)
 <% end %>
